--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,1 +1,15 @@
 /* your styles go here */
+body {
+  background-color: #1a1a1a;
+}
+.my-work-section {
+  background-color: #1a1a1a;
+}
+
+.contact {
+  background-color: #50bda3;
+}
+
+nav {
+  background-color: #1a1a1a;
+}
