--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -218,6 +218,7 @@ nav.navbar a.nav-link:hover {
 */
 .about-section {
   background-color: #1a1a1a;
+  color: #50bda3;
 }
 
 .about-section .skill-item {
@@ -653,7 +654,7 @@ footer.main-footer p.template-bootstrapious {
   margin-top: 20px;
   text-align: center;
   color: #eee;
-  font-size: 0.9rem;
+  font-size: 0.5rem;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -1190,7 +1191,7 @@ STYLE SWITCHER FOR DEMO
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #4fbfa8;
+  background-color: #6c757d;
   border-color: #4fbfa8;
 }
 
